# tof-analysis

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
DATA/: README.md
calibration/: reference.json  reference_200KICK_test.json  reference_300KICK_wireprobe0.json  reference_Ho_2.json  reference_Tm.json  reference_holmium_80eV.json  reference_tm_250kick.json  reference_tm_300kick.json  reference_tm_300kick_3.json  reference_tm_350kick.json  reference_tm_350kick_2.json  reference_tm_400kick.json  reference_tm_400kick_2.json  reference_tm_500kick.json
config/: custom_ions.json
notebooks/: analysis.ipynb  calibration.ipynb  gas_45_dwell_comparison.ipynb
scripts/: setup_env.bat  setup_env.ps1  setup_env.sh
tof_analysis/: __init__.py  analysis_workbench.py  calibration.py  calibration_store.py  catalog.py  detection.py  interactive_analysis.py  interactive_calibration.py  interactive_workbench.py  io.py  ion_config.py  physics.py  plot_style.py  plotting.py  reference_calibration.py  subtract.py  workbench_state.py  workflow.py
